Titoli del quinto capitolo, modifiche al quarto prima dell'invio

--- a/packages.sty
+++ b/packages.sty
@@ -17,7 +17,7 @@
 % To enable the euro character with the command "\euro"
 \usepackage{eurosym}
 \usepackage{listings}
-%\usepackage{minted}
+\renewcommand{\lstlistingname}{Listato}
 %
 % INDICES
 %
