--- a/packages.sty
+++ b/packages.sty
@@ -93,7 +93,7 @@
 \usetikzlibrary{backgrounds}
 
 % Folders with high quality pictures
-\graphicspath{{frontmatter/images},{chapter3/images},{chapter4/images}}
+\graphicspath{{frontmatter/images},{chapter3/images},{chapter4/images},{chapter5/images}}
 
 % Otherwise a folder with poor quality
 %\graphicspath{{low_res_pictures/}}
