Corretto il capitolo 5

--- a/backmatter/bibliography.tex
+++ b/backmatter/bibliography.tex
@@ -13,6 +13,11 @@
 \vspace{2.5cm}
 \begin{Large}Siti web consultati\end{Large}
 \begin{itemize}
-    \item Unity Real-Time Development Platform | 3D, 2D, VR \& AR Engine -- \url{www.unity.com}
+    \item Unity Real-Time Development Platform | 3D, 2D, VR \& AR Engine -- \url{www.unity.com};
+    \item Vuforia Engine Developer Portal \url{https://developer.vuforia.com};
+    \item Polycam - LiDAR \& 3D Scanner for iPhone \& Android \url{https://poly.cam};
+    \item blender.org - Home of the Blender project - Free and Open 3D Creation Software \url{https://www.blender.org};
+    \item Google Earth Studio \url{https://www.google.com/intl/it/earth/studio/};
+    \item MongoDB: La Piattaforma Di Dati Applicativi | MongoDB \url{https://www.mongodb.com/it-it};
 \end{itemize}
 
