--- a/frontmatter/credits.tex
+++ b/frontmatter/credits.tex
@@ -4,12 +4,10 @@
 \null \vspace {\stretch{1}}
 	\begin{flushright}
 %	\begin{verse}
-\textit{Ogni cosa era più sua che di ogni altro
-la terra, l'aria, l'acqua non hanno padroni\\
-ma sono di tutti gli uomini, o meglio di chi sa farsi\\
-terra, aria, acqua e sentirsi parte di tutto il creato} \\[5mm]
+\textit{Una nave in porto è al sicuro, \\
+ma non è per questo che le navi sono state costruite} \\[5mm]
 %	\end{verse}
-	Mario Rigoni Stern, ''Stagioni''
+	Benazir Bhutto
 	\end{flushright}
 \vspace{\stretch{2}}\null
 
