--- a/packages.sty
+++ b/packages.sty
@@ -93,7 +93,7 @@
 \usetikzlibrary{backgrounds}
 
 % Folders with high quality pictures
-\graphicspath{{frontmatter/images},{chapter3/images},{chapter4/images},{chapter5/images}}
+\graphicspath{{frontmatter/images},{chapter3/images},{chapter4/images},{chapter5/images},{chapter6/images}}
 
 % Otherwise a folder with poor quality
 %\graphicspath{{low_res_pictures/}}
@@ -251,3 +251,4 @@ bindingoffset=15mm,marginpar=1.5cm,reversemp]{geometry}
 % To provide support for the manipulation and reference of small or ‘sub’ figures
 % and tables within a single figure or table environment
 \usepackage{subfig}
+\usepackage{siunitx}
