--- a/main.tex
+++ b/main.tex
@@ -30,6 +30,7 @@
 % table  --> to avoid the message: package xcolor has already been loaded ...
 
 \usepackage{packages}
+\usepackage{my_listings}
 % Almost all the settings are defined in packages.sty
 
 % Put a grey textual watermark on document pages (PS mode only)
