--- a/packages.sty
+++ b/packages.sty
@@ -93,7 +93,7 @@
 \usetikzlibrary{backgrounds}
 
 % Folders with high quality pictures
-\graphicspath{{frontmatter/images},{chapter3/images},{chapter4/images},{chapter5/images},{chapter6/images}}
+\graphicspath{{frontmatter/images},{chapter3/images},{chapter4/images},{chapter5/images},{chapter6/images},{chapter7/images}}
 
 % Otherwise a folder with poor quality
 %\graphicspath{{low_res_pictures/}}
@@ -133,6 +133,7 @@
 
 % To enable the justify in the tables
 \usepackage{tabularx}
+\usepackage{tabularray}
 
 %
 % GENERAL SETTINGS
