Prima bozza di settimo capitolo, introduzione, conclusioni, abstract

--- a/backmatter/bibliography.tex
+++ b/backmatter/bibliography.tex
@@ -19,5 +19,6 @@
     \item blender.org - Home of the Blender project - Free and Open 3D Creation Software \url{https://www.blender.org};
     \item Google Earth Studio \url{https://www.google.com/intl/it/earth/studio/};
     \item MongoDB: La Piattaforma Di Dati Applicativi | MongoDB \url{https://www.mongodb.com/it-it};
+    \item Vivino - Acquista il vino giusto -- \url{www.vivino.com};
 \end{itemize}
 
