--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,3 +1,85 @@
 @inbook{Zhang_2016a, place={Boca Raton, FL}, title={A History of Precision Agricolture}, booktitle={Precision Agriculture Technology for crop farming}, publisher={Taylor \& Francis}, author={Zhang, Qin}, year={2016}, pages={1–13}} 
 
 @book{Patel_2021, place={Boca Ratan, NL}, title={Smart agriculture emerging pedagogies of deep learning, Machine Learning and internet of things}, publisher={CRC Press}, author={Patel, Govind Singh}, year={2021}} 
+
+@article{zhang2002precision,
+  title={Precision agriculture—a worldwide overview},
+  author={Zhang, Naiqian and Wang, Maohua and Wang, Ning},
+  journal={Computers and electronics in agriculture},
+  volume={36},
+  number={2-3},
+  pages={113--132},
+  year={2002},
+  publisher={Elsevier}
+}
+
+@article{pierce1999aspects,
+  title={Aspects of precision agriculture},
+  author={Pierce, Francis J and Nowak, Peter},
+  journal={Advances in agronomy},
+  volume={67},
+  pages={1--85},
+  year={1999},
+  publisher={Elsevier}
+}
+
+@article{stafford2000implementing,
+  title={Implementing precision agriculture in the 21st century},
+  author={Stafford, John V},
+  journal={Journal of agricultural engineering research},
+  volume={76},
+  number={3},
+  pages={267--275},
+  year={2000},
+  publisher={Elsevier}
+}
+
+@article{gebbers2010precision,
+  title={Precision agriculture and food security},
+  author={Gebbers, Robin and Adamchuk, Viacheslav I},
+  journal={Science},
+  volume={327},
+  number={5967},
+  pages={828--831},
+  year={2010},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{brisco1998precision,
+  title={Precision agriculture and the role of remote sensing: a review},
+  author={Brisco, B and Brown, RJ and Hirose, T and McNairn, H and Staenz, K},
+  journal={Canadian Journal of Remote Sensing},
+  volume={24},
+  number={3},
+  pages={315--327},
+  year={1998},
+  publisher={Taylor \& Francis}
+}
+
+@article{feng2020applying,
+  title={Applying blockchain technology to improve agri-food traceability: A review of development methods, benefits and challenges},
+  author={Feng, Huanhuan and Wang, Xiang and Duan, Yanqing and Zhang, Jian and Zhang, Xiaoshuan},
+  journal={Journal of cleaner production},
+  volume={260},
+  pages={121031},
+  year={2020},
+  publisher={Elsevier}
+}
+
+@inproceedings{lin2018blockchain,
+  title={Blockchain and IoT based food traceability for smart agriculture},
+  author={Lin, Jun and Shen, Zhiqi and Zhang, Anting and Chai, Yueting},
+  booktitle={Proceedings of the 3rd international conference on crowd science and engineering},
+  pages={1--6},
+  year={2018}
+}
+
+@article{olsen2018components,
+  title={The components of a food traceability system},
+  author={Olsen, Petter and Borit, Melania},
+  journal={Trends in Food Science \& Technology},
+  volume={77},
+  pages={143--149},
+  year={2018},
+  publisher={Elsevier}
+}
