--- a/frontmatter/abstract.tex
+++ b/frontmatter/abstract.tex
@@ -1,9 +1,9 @@
 %\selectlanguage{italian}
 \begin{abstract}
 
-Negli ultimi anni la Customer Analytics ha assunto un’importanza sempre maggiore, in quanto, riuscendo a capire i comportamenti dei clienti e le loro preferenze, permette di prendere decisioni strategiche e tattiche. Le promozioni giocano un ruolo importantissimo nel soddisfare ed attirare nuovi clienti. In questa tesi sono stati analizzati i dati relativi alle promozioni ed alle vendite dell’azienda Fater. In particolare è stata realizzata una fase di ETL dei dati, seguita da un’analisi descrittiva. Successivamente è stata effettuata una fase di clustering, seguita da una di classificazione, per valutare quanto le promozioni abbiano influenzato le vendite.
+In questi ultimi anni il tema dell'agricoltura di precisione ha assunto un'importanza sempre maggiore in quanto consente di ottimizzare la produzione dei prodotti alimentari e di prevedere le malattie che colpiscono le coltivazioni adottando misure preventive. Inoltre, il tracciamento dei prodotti è un'attività fondamentale che consente di effettuare delle campagne di richiamo di prodotti alimentari che risultano pericolosi per la salute. In questa tesi, è stato creato un prototipo di un'applicazione Android in grado di riconoscere, tramite fotocamera, le bottiglie di vino e mostrarne all'utente informazioni relative al vigneto di provenienza. In particolare, si è illustrato l'intero processo che va dalla creazione del modello tridimensionale fino allo sviluppo dell'applicazione in Unity. Successivamente sono stati effettuati dei confronti tra l'applicazione e i sistemi di tracciamento dei prodotti alimentari ed infine è stata effettuata una SWOT Analysis dei rischi individuati nel progetto.
 \\[1cm]
-\textbf{Keyword}: Data Analytics, Customer Analytics, Promozioni, Extract Trasform and Load, Exploratory Data Analysis, Cluster, Classificazione, Pandas
+\textbf{Keyword}: Agricoltura di precisione, Tracciamento dei prodotti, Data Analytics, Agricoltura 4.0, Ottimizzazione della produzione, Augmented Reality, Unity, Vuforia Engine
 \end{abstract} 
 
 \selectlanguage{italian}
