--- a/introduction/introduction.tex
+++ b/introduction/introduction.tex
@@ -3,31 +3,31 @@
 \chapter*{Introduzione}
 \markboth{Introduzione}{}
 
-Negli ultimi decenni i dati hanno assunto un'importanza sempre maggiore nella vita di un'azienda e, soprattutto, rappresentano un vantaggio competitivo, se sono ben utilizzati. Per fare ciò, essi devono essere analizzati e studiati a fondo. L’analisi dei dati è un processo di ispezione, pulizia, trasformazione e modellazione
-di dati con il fine di evidenziare informazioni utili che supportino le decisioni strategiche aziendali.
-Se le decisioni aziendali vengono prese senza l'utilizzo della conoscenza dei dati, non parliamo di una \textit{decisione strategica} ma di una semplice \textit{ipotesi}.
+L'evoluzione tecnologica nel settore agricolo ha introdotto concetti fondamentali come l'agricoltura di precisione e il tracciamento dei prodotti alimentari, rivoluzionando il modo in cui affrontiamo le sfide legate alla produzione agricola. In questo contesto, il presente lavoro si colloca tra l'innovazione tecnologica e il settore vitivinicolo, proponendo lo sviluppo di un'applicazione mobile volta a riconoscere le bottiglie di vino al fine di fornire informazioni dettagliate sullo stato di salute del vigneto di provenienza.
 
-Le aziende sono in possesso di una grande mole di dati; esse, spesso, non riescono ad interpretarli e sfruttare l'enorme potenziale che essi hanno. Per capire questo concetto, riportiamo una frase del matematico francese, Henri Poincaré, ovvero: ``la scienza è fatta di dati come una casa è fatta di pietre. Ma un ammasso di dati non è scienza più di quanto un mucchio di pietre sia una vera casa". Questa frase ribadisce il fatto che, nonostante un'azienda sia in possesso di tantissimi dati, non necessariamente questi portano informazioni utili all'azienda. Tuttavia, attraverso una fase accurata di analisi, possono portare l'azienda stessa al successo. 
+L'agricoltura di precisione, con la sua capacità di raccogliere dati dettagliati attraverso l'uso di tecnologie avanzate, ha dimostrato di essere una risorsa cruciale per ottimizzare le pratiche agricole. Il tracciamento dei prodotti alimentari, d'altro canto, ha assunto un ruolo di primaria importanza nella garanzia della qualità e nella sicurezza alimentare, permettendo ai consumatori di accedere a informazioni accurate riguardo all'origine e alla produzione degli alimenti che consumano.
 
-I dati hanno un potenziale informativo enorme, che può aiutare le imprese sia a conoscere meglio se stesse (utilizzando i dati interni) sia il proprio mercato (utilizzando dati esterni), ma soprattutto i propri clienti.  Secondo Peter Drucker, considerato il padre del management moderno, lo scopo di un’azienda è quello di creare e mantenere stretto un cliente attraverso il marketing e l’innovazione. \uppercase{è} molto importante soddisfare il cliente con i propri prodotti/servizi;  però, la maggior parte delle volte questo è molto difficile a causa della concorrenza.  Per questo motivo, nell'ultimo  periodo, sono tante le imprese che  hanno  iniziato a  considerare  di  fondamentale  importanza  la  \textit{customer  analytics},  per  conoscere  i propri clienti ed ottenere risultati migliori. Grazie a questa attività si riescono a capire i comportamenti dei propri clienti e le preferenze di questi ultimi al fine di prendere decisioni commerciali strategiche  e  tattiche. 
+Nel contesto specifico della viticoltura, la prevenzione delle malattie rappresenta una sfida fondamentale. La peronospora, una delle patologie più comuni, può causare gravi danni alle viti, influenzando la qualità e la quantità della produzione. In risposta a questa esigenza, l'obiettivo principale di questo progetto è sviluppare un sistema in grado di monitorare in tempo reale lo stato di salute del vigneto, utilizzando la tecnologia mobile per riconoscere le bottiglie di vino e fornire informazioni dettagliate sulle condizioni della coltivazione.
 
+Attraverso l'integrazione di dati provenienti da sensori sul campo e l'utilizzo di dati provenienti dall'API OpenWeather, l'applicazione proposta mira non solo a identificare le bottiglie di vino, ma anche una panoramica completa sulle condizioni del vigneto e consentendo interventi tempestivi per prevenire e gestire le malattie.
 
-In generale si può dire che tutti i dati sono importanti per il business, perché la maggior parte aiuta a scoprire e analizzare le aspettative dei clienti e le opportunità di crescita più efficaci. I dati utilizzati per eseguire questo tipo di analisi, la maggior parte delle volte,  possono provenire da diversi reparti di un'azienda e riguardano le vendite, gli acquisti, i prodotti, ma  anche le promozioni realizzate dall'azienda stessa.
+Il presente lavoro si propone quindi di contribuire allo sviluppo di soluzioni innovative nel settore vitivinicolo, sfruttando le potenzialità dell'agricoltura di precisione e del tracciamento avanzato per garantire la sostenibilità e la prosperità del settore, promuovendo al contempo una maggiore consapevolezza nei consumatori riguardo all'origine e alla qualità dei prodotti vinicoli.
 
-Queste ultime svolgono un ruolo fondamentale nel soddisfare e attirare nuovi clienti,  in  quanto  stimolano la  richiesta  del  prodotto/servizio che,  all'occhio del cliente, deve  sembrare più  attraente e innovativo. In base agli obiettivi dell'azienda, le strategie promozionali possono essere di tipo \textit{pull} o \textit{push}. Le prime cercano  di  far  sì  che  i  clienti ``tirino”  i  prodotti  dall'azienda, attraverso, per esempio, l'utilizzo di sconti. Le seconde cercano di spingere il prodotto dall'azienda  verso  distributori  e  rivenditori. Le prime permettono di costruire un legame più forte con il cliente, in quanto è a stretto contatto con questo.     
+Il lavoro svolto nella tesi si concentra nello sviluppo del prototipo di un'applicazione Android in grado di riconoscere le bottiglie di vino in modo tale da visualizzarne informazioni relative allo stato di salute del vigneto di provenienza. Per prima cosa, sono stati individuati gli strumenti software necessari all'implementazione dell'applicazione Android come \textit{Unity}, \textit{Vuforia Engine} e \textit{Polycam} per poi definire nel dettaglio gli aspetti progettuali del lavoro. Infatti, una volta definiti gli strumenti, si sono scelte le versioni di ogni strumento software per evitare problematiche legate alla compatibilità per poi illustrare nel dettaglio i Class Diagram e Sequence Diagram per avere un quadro più chiaro degli aspetti software cruciali dell'applicazione.
 
+Successivamente si è mostrato e descritto approfonditamente il codice delle classi C\# rilevanti del progetto per chiarire ogni aspetto implementativo dell'applicazione e quindi giustificare le scelte progettuali effettuate in fase di progettazione.
 
+L'ultima parte del lavoro è incentrata nel confronto dell'applicazione con i sistemi di tracciamento dei prodotti alimentari con l'obiettivo di analizzare gli aspetti in comune e quelli non in comune dell'applicazione con questi sistemi.
 
-In questo elaborato sono stati analizzati i dati relativi alle promozioni e alle vendite dell'azienda Fater. In una prima fase viene effettuata una pulizia dei dati; successivamente, viene eseguita un'esplorazione di questi per comprenderli meglio. Ci sarà, anche, un'analisi descrittiva dei contenuti più interessanti all'interno dei dataset. L'obiettivo finale è quello di capire quanto le promozioni, realizzate dall'azienda, hanno influenzato le vendite; per fare ciò, viene eseguita una fase di clustering; successivamente, per riuscire a esprimere quanto un nuovo prodotto in  promozione influenzerà la vendita, viene svolta una fase di classificazione.
+Successivamente, si è svolta una discussione in merito ai rischi individuati nel progetto, fornendone un'accurata SWOT Analysis. Infine si sono indicati i possibili sviluppo futuri del prototipo dell'applicazione mobile.
 
-La presente tesi è composta da sette capitoli strutturati come di seguito specificato:
+La tesi è composta da sette capitoli strutturati come di seguito specificato:
 \begin{itemize}
-	\item Nel Capitolo 1 saranno introdotti il mondo della customer analytics e, successivamente, il ruolo delle promozioni nelle campagne di marketing.
-	\item Nel Capitolo 2 si presenteranno le attività relative alle campagne promozionali in Fater. In particolare, si introdurranno le due tipologie di sconti utilizzate e la gerarchia dei clienti.
-	\item Nel Capitolo 3 verrà introdotto il sistema dell'azienda riguardante le promozioni; successivamente, saranno illustrati i set di dati relativi alle promozioni e alle vendite dell'azienda.
-	\item Nel Capitolo 4 verranno analizzate le fasi di ETL e di EDA sui dataset delle promozioni e delle vendite e sarà effettuata un'analisi descrittiva dei dati.
-	\item Nel Capitolo 5 verranno analizzate le attività di clustering e classificazione dei dataset.
-	\item Nel Capitolo 6 saranno riportati i risultati ottenuti.
-	\item Nel Capitolo 7 verranno tratte le conclusioni e verranno delineati alcuni possibili sviluppi futuri.
-	
+	\item Nel Capitolo 1 sarà introdotto il mondo molto complesso dell'agricoltura di precisione partendo dalla sua storia per poi approfondire le tecnologie utilizzate oggi nel settore.
+	\item Nel Capitolo 2 si presenterà il tema del tracciamento dei prodotti alimentari che è strettamente legato alla tematica dell'agricoltura di precisione.
+	\item Nel Capitolo 3 verranno introdotti tutti gli strumenti software impiegati nello sviluppo dell'applicazione.
+	\item Nel Capitolo 4 si concentrerà sugli aspetti progettuali del progetto, mostrando i Class Diagram e Sequence Diagram.
+	\item Il Capitolo 5 è dedicato al lato implementativo del progetto, descrivendo il lavoro svolto nello sviluppo dell'applicazione Android.
+	\item Nel Capitolo 6 si effettuerà un confronto dell'applicazione con i sistemi di tracciamento dei prodotti alimentari.
+	\item Nel Capitolo 7 si effettuerà una discussione del progetto in merito all'analisi dei principali rischi individuati.	
 \end{itemize}
