--- a/my_listings.sty
+++ b/my_listings.sty
@@ -17,6 +17,10 @@
 \definecolor{stringcolor}{rgb}{1,0.56,0.31}
 \definecolor{commentcolor}{rgb}{0,0.5,0}
 
+\definecolor{CreamBrulee}{rgb}{1,0.898,0.6}
+\definecolor{BarleyWhite}{rgb}{1,0.949,0.8}
+\definecolor{DoublePearlLusta}{rgb}{0.988,0.898,0.803}
+
 
 \lstset{
   language=C,
