--- a/acknowledgements/acknowledgements.tex
+++ b/acknowledgements/acknowledgements.tex
@@ -2,5 +2,18 @@
 \addcontentsline{toc}{chapter}{Ringraziamenti}
 \markboth{Ringraziamenti}
 \emph{
+E anche stavolta l'ho scampata: sono arrivato al punto di scrivere per la seconda volta i ringraziamenti di una tesi di laurea. E io che speravo di squagliarmela, pensando di non dover mai più sostenere gli esami. Sia chiaro, mi sono reso subito conto che dovevo continuare a studiare, soprattutto durante il periodo infernale di quattro mesi passato a lavorare in smart working. Che fico! Lavori da casa, mi dicevano. Non consideravo nell'equazione due problemini non da poco: il primo il più ovvio. Ero e sono totalmente impreparato. Che bello quando non sai che fare quando chiudi la chiamata Teams e sei da solo. Io, il PC. e non c'era ancora Chat GPT. Il secondo era connessione. Grazie TIM per avermi portato la fibra quando ormai ero in procinto di riscrivermi alla magistrale. In lacrime. In posizione fetale sul letto, maledicendo ogni singolo passaggio necessario all'iscrizione.
+
+Comunque alla triennale, ricordo benissimo come mentre stavo scrivendo i ringraziamenti un tizio abbia deciso di schiantarsi contro una casa distante meno di 100 metri da casa mia. Non nascondo che in questo momento sto digitando i caratteri sulla tastiera con le mani sudate e guardandomi attorno, pronto a tirare fuori qualcuno dalle lamiere. Ah dimenticavo, il tizio non si fece nulla, per fortuna, almeno stavolta chissà...
+
+Passando a discorsi più seri ringrazio Valentina, per aver sopportato nella seconda parte di questo percorso, gli enormi sproloqui e monologhi che partivano senza controllo dalla mia mente nei momenti di maggiore stress pre-esame. Grazie per essere la mia bussola nei momenti in cui perdo l'orientamento e credo stupidamente di non poter superare determinati ostacoli che inevitabilmente incontro durante il cammino. Sei l'isola in cui rifugiarsi quando fuori il mare è tempestoso.
+
+Ringrazio i miei amici, fondamentali per staccare la spina nei momenti più intensi e cercare conforto quando ne ho avuto bisogno. Non riesco veramente a riassumere in poche righe quanto vi sia riconoscente per tutto quello che fate per me. 
+
+Il percorso della magistrale è stato un percorso diverso dal solito. Poche lezioni in presenza, anzi, nessuna. Ringrazio comunque i miei compari di esami, alcuni dei quali reclutati direttamente dalla triennale come Simone Onori, altri invece si sono uniti dopo alla ciurma come Simone Francalancia, Giacomo e Nicola. Fa ridere perché ho scoperto con stupore che anche loro possedevano delle gambe come tutti gli esseri umani agli ultimi esami. Fa un effetto strano, ma vabbè era comodo studiare e lavorare ai progetti da remoto, maledicendo divinità appartenenti a civiltà ormai estinte. Grazie per tutto l'impegno speso nel portare a termine i maledettissimi progetti. Senza di voi non sarei qui in questo momento. Vi auguro il meglio e spero di cuore che abbiate tutti una meravigliosa carriera. Ve lo meritate davvero.
+
+
+
+
 
 }
