Prima bozza finale

--- a/introduction/introduction.tex
+++ b/introduction/introduction.tex
@@ -3,23 +3,23 @@
 \chapter*{Introduzione}
 \markboth{Introduzione}{}
 
-L'evoluzione tecnologica nel settore agricolo ha introdotto concetti fondamentali come l'agricoltura di precisione e il tracciamento dei prodotti alimentari, rivoluzionando il modo in cui affrontiamo le sfide legate alla produzione agricola. In questo contesto, il presente lavoro si colloca tra l'innovazione tecnologica e il settore vitivinicolo, proponendo lo sviluppo di un'applicazione mobile volta a riconoscere le bottiglie di vino al fine di fornire informazioni dettagliate sullo stato di salute del vigneto di provenienza.
+L'evoluzione tecnologica nel settore agricolo ha introdotto concetti fondamentali come l'agricoltura di precisione e il tracciamento dei prodotti alimentari, rivoluzionando il modo in cui affrontiamo le sfide legate alla produzione agricola.
 
 L'agricoltura di precisione, con la sua capacità di raccogliere dati dettagliati attraverso l'uso di tecnologie avanzate, ha dimostrato di essere una risorsa cruciale per ottimizzare le pratiche agricole. Il tracciamento dei prodotti alimentari, d'altro canto, ha assunto un ruolo di primaria importanza nella garanzia della qualità e nella sicurezza alimentare, permettendo ai consumatori di accedere a informazioni accurate riguardo all'origine e alla produzione degli alimenti che consumano.
 
-Nel contesto specifico della viticoltura, la prevenzione delle malattie rappresenta una sfida fondamentale. La peronospora, una delle patologie più comuni, può causare gravi danni alle viti, influenzando la qualità e la quantità della produzione. In risposta a questa esigenza, l'obiettivo principale di questo progetto è sviluppare un sistema in grado di monitorare in tempo reale lo stato di salute del vigneto, utilizzando la tecnologia mobile per riconoscere le bottiglie di vino e fornire informazioni dettagliate sulle condizioni della coltivazione.
+Nel contesto specifico della viticoltura, la prevenzione delle malattie rappresenta una sfida fondamentale. La peronospora, una delle patologie più comuni, può causare gravi danni alle viti, influenzando la qualità e la quantità della produzione. In risposta a questa esigenza, l'obiettivo principale di questo progetto è sviluppare un sistema in grado di monitorare in tempo reale lo stato di salute del vigneto, utilizzando lo smartphone per riconoscere le bottiglie di vino, e fornire informazioni dettagliate sulle condizioni della coltivazione.
 
-Attraverso l'integrazione di dati provenienti da sensori sul campo e l'utilizzo di dati provenienti dall'API OpenWeather, l'applicazione proposta mira non solo a identificare le bottiglie di vino, ma anche una panoramica completa sulle condizioni del vigneto e consentendo interventi tempestivi per prevenire e gestire le malattie.
+Attraverso l'integrazione di dati provenienti da sensori sul campo e l'utilizzo di dati provenienti dall'API OpenWeather, l'applicazione proposta mira non solo a identificare le bottiglie di vino, ma anche a fornire una panoramica sulle condizioni del vigneto consentendo interventi tempestivi per prevenire e gestire le malattie.
 
-Il presente lavoro si propone quindi di contribuire allo sviluppo di soluzioni innovative nel settore vitivinicolo, sfruttando le potenzialità dell'agricoltura di precisione e del tracciamento avanzato per garantire la sostenibilità e la prosperità del settore, promuovendo al contempo una maggiore consapevolezza nei consumatori riguardo all'origine e alla qualità dei prodotti vinicoli.
+Il presente lavoro si propone, quindi, nel contribuire allo sviluppo di soluzioni innovative nel settore vitivinicolo, sfruttando le potenzialità dell'agricoltura di precisione e del tracciamento avanzato per garantire la sostenibilità e la prosperità del settore, promuovendo al contempo una maggiore consapevolezza nei consumatori riguardo all'origine e alla qualità dei prodotti vinicoli.
 
-Il lavoro svolto nella tesi si concentra nello sviluppo del prototipo di un'applicazione Android in grado di riconoscere le bottiglie di vino in modo tale da visualizzarne informazioni relative allo stato di salute del vigneto di provenienza. Per prima cosa, sono stati individuati gli strumenti software necessari all'implementazione dell'applicazione Android come \textit{Unity}, \textit{Vuforia Engine} e \textit{Polycam} per poi definire nel dettaglio gli aspetti progettuali del lavoro. Infatti, una volta definiti gli strumenti, si sono scelte le versioni di ogni strumento software per evitare problematiche legate alla compatibilità per poi illustrare nel dettaglio i Class Diagram e Sequence Diagram per avere un quadro più chiaro degli aspetti software cruciali dell'applicazione.
+Più specificatamente, ci si propone di sviluppare di un'applicazione Android in grado di riconoscere le bottiglie di vino e visualizzarne le informazioni relative allo stato di salute del vigneto di provenienza. Inizialmente, sono stati identificati gli strumenti software necessari allo sviluppo dell'applicazione, tra cui \textit{Unity}, \textit{Vuforia Engine}, e \textit{Polycam}. Successivamente, sono stati illustrati gli aspetti progettuali, con la selezione delle versioni di ciascun software per evitare potenziali problemi di compatibilità. Sono stati presentati i Class Diagram e i Sequence Diagram al fine di fornire un quadro chiaro degli aspetti software cruciali dell'applicazione.
 
-Successivamente si è mostrato e descritto approfonditamente il codice delle classi C\# rilevanti del progetto per chiarire ogni aspetto implementativo dell'applicazione e quindi giustificare le scelte progettuali effettuate in fase di progettazione.
+Nella fase successiva, è stato esaminato approfonditamente il codice delle classi C\# più rilevanti del progetto, al fine di chiarire ogni aspetto implementativo e giustificare le scelte progettuali effettuate durante la fase di progettazione.
 
-L'ultima parte del lavoro è incentrata nel confronto dell'applicazione con i sistemi di tracciamento dei prodotti alimentari con l'obiettivo di analizzare gli aspetti in comune e quelli non in comune dell'applicazione con questi sistemi.
+L'ultima parte del lavoro si è concentrata sul confronto dell'applicazione con i sistemi di tracciamento dei prodotti alimentari, analizzando gli elementi in comune e non tra l'applicazione sviluppata e tali sistemi.
 
-Successivamente, si è svolta una discussione in merito ai rischi individuati nel progetto, fornendone un'accurata SWOT Analysis. Infine si sono indicati i possibili sviluppo futuri del prototipo dell'applicazione mobile.
+Successivamente, è stata condotta un'analisi SWOT accurata dell'applicazione. Infine, sono stati indicati possibili sviluppi futuri.
 
 La tesi è composta da sette capitoli strutturati come di seguito specificato:
 \begin{itemize}
@@ -27,7 +27,8 @@ La tesi è composta da sette capitoli strutturati come di seguito specificato:
 	\item Nel Capitolo 2 si presenterà il tema del tracciamento dei prodotti alimentari che è strettamente legato alla tematica dell'agricoltura di precisione.
 	\item Nel Capitolo 3 verranno introdotti tutti gli strumenti software impiegati nello sviluppo dell'applicazione.
 	\item Nel Capitolo 4 si concentrerà sugli aspetti progettuali del progetto, mostrando i Class Diagram e Sequence Diagram.
-	\item Il Capitolo 5 è dedicato al lato implementativo del progetto, descrivendo il lavoro svolto nello sviluppo dell'applicazione Android.
+	\item Il Capitolo 5 è dedicato al lato implementativo del progetto, descrivendo il codice impiegato nello sviluppo dell'applicazione Android.
 	\item Nel Capitolo 6 si effettuerà un confronto dell'applicazione con i sistemi di tracciamento dei prodotti alimentari.
 	\item Nel Capitolo 7 si effettuerà una discussione del progetto in merito all'analisi dei principali rischi individuati.	
+	\item Infine, si trarranno le conclusioni in merito al lavoro svolto e si delineeranno alcuni possibili sviluppi futuri.
 \end{itemize}
