--- a/frontmatter/abstract.tex
+++ b/frontmatter/abstract.tex
@@ -1,7 +1,7 @@
 %\selectlanguage{italian}
 \begin{abstract}
 
-In questi ultimi anni il tema dell'agricoltura di precisione ha assunto un'importanza sempre maggiore in quanto consente di ottimizzare la produzione dei prodotti alimentari e di prevedere le malattie che colpiscono le coltivazioni adottando misure preventive. Inoltre, il tracciamento dei prodotti è un'attività fondamentale che consente di effettuare delle campagne di richiamo di prodotti alimentari che risultano pericolosi per la salute. In questa tesi, è stato creato un prototipo di un'applicazione Android in grado di riconoscere, tramite fotocamera, le bottiglie di vino e mostrarne all'utente informazioni relative al vigneto di provenienza. In particolare, si è illustrato l'intero processo che va dalla creazione del modello tridimensionale fino allo sviluppo dell'applicazione in Unity. Successivamente sono stati effettuati dei confronti tra l'applicazione e i sistemi di tracciamento dei prodotti alimentari ed infine è stata effettuata una SWOT Analysis dei rischi individuati nel progetto.
+In questi ultimi anni il tema dell'agricoltura di precisione ha assunto un'importanza sempre maggiore in quanto consente di ottimizzare la produzione dei prodotti alimentari e di prevedere le malattie che colpiscono le coltivazioni adottando misure preventive. Inoltre, il tracciamento dei prodotti è un'attività fondamentale che consente di effettuare delle campagne di richiamo di prodotti alimentari che risultano pericolosi per la salute. In questa tesi, è stato creato un prototipo di un'applicazione Android in grado di riconoscere, tramite fotocamera, le bottiglie di vino e mostrarne all'utente informazioni relative al vigneto di provenienza. In particolare, si è illustrato l'intero processo che va dalla creazione del modello tridimensionale fino allo sviluppo dell'applicazione in Unity. Successivamente sono stati effettuati dei confronti tra l'applicazione e i sistemi di tracciamento dei prodotti alimentari. Infine, è stata realizzata una SWOT Analysis per evidenziare i punti di forza, di debolezza, le opportunità e le minacce del progetto.
 \\[1cm]
 \textbf{Keyword}: Agricoltura di precisione, Tracciamento dei prodotti, Data Analytics, Agricoltura 4.0, Ottimizzazione della produzione, Augmented Reality, Unity, Vuforia Engine
 \end{abstract} 
