Correzione dei ringraziamenti

--- a/acknowledgements/acknowledgements.tex
+++ b/acknowledgements/acknowledgements.tex
@@ -13,9 +13,9 @@ Se sono arrivato qui è grazie ai miei amici fondamentali per staccare la spina 
 
 Ringrazio infinitamente Marco e Carlo di Trace Technologies. Potevate essere inclusi tra i ringraziamenti agli amici ma qui vi ringrazio anche da un punto di vista professionale. Grazie per aver reso possibile il lavoro di tirocinio. Senza di voi tutto questo lavoro non esisterebbe.
 
-Ovviamente, una delle differenza fondamentali tra la laurea triennale e magistrale è stato il numero maggiore di progetti da portare a termine per ogni esame. Ringrazio tanto i miei colleghi Simone Francalancia, Simone Onori, Nicola e Giacomo per il numero incalcolabile di ore passate in call per cercare di finire in tempo i progetti.
+Ovviamente, una delle differenze fondamentali tra la laurea triennale e quella magistrale è stato il numero maggiore di progetti da portare a termine per ogni esame. Ringrazio tanto i miei colleghi Simone Francalancia, Simone Onori, Nicola e Giacomo per il numero incalcolabile di ore passate in call per cercare di finire in tempo i progetti.
 
-Infine ringrazio, e non in ordine di importanza, il professor Ursino. Se ho ripreso a programmare con il sorriso e con quella spensieratezza che avevo quando ero alle superiori è solo grazie a lei.
+Infine, ringrazio, e non in ordine di importanza, il professor Ursino. Se ho ripreso a programmare con il sorriso e con quella spensieratezza che avevo quando ero alle superiori è solo grazie a Lei.
 
 Alla fine di questo percorso non sono che all'inizio di questo lungo viaggio che è la vita. Non so minimamente cosa mi aspetterà, ma so per certo che con voi accanto sarà bellissimo lasciare il mio porto sicuro.
 }
